--- a/css/main.css
+++ b/css/main.css
@@ -8,25 +8,28 @@ body{
 /*  */
 .header-mobile{
     display: flex;
-    justify-content: space-between;
     background: green;
     padding: 0px 20px;
+    position: fixed;
+    justify-content: space-between;
+    text-align: center;
+    left:0;
+    right: 0;
 }
 .logo{
     font-family: 'Oswald', solid;
     font-size: 30px;
     font-weight: 900;
-    padding-right: 50px;
 }
 a{
     text-decoration: none;
-    color: black;
+    color: white;
 }
 .header-mobile i{ 
     border-left: 1px dashed black;
     font-size: 30px;
     padding: 10px;
-    padding-left: 0.7em;
+    padding-left: 30px;
 }
 /*  */
 .l1{
@@ -35,6 +38,7 @@ a{
     flex-direction: column;
     justify-content: center;
     margin: 10px;
+    margin-top: 60px;
     padding: 5px;
 }
 /*  */
@@ -55,31 +59,79 @@ a{
 }
 .cena h3{
     text-decoration: underline;
-    padding-top: 5px;
+    padding: 10px 10px 0px;
 }
 .cena p{
-    color: orange;
+    color: #ff6434;
     font-size: 1.4em;
 }
 .komplekt img, .projekt img, .key img{ 
     width: 100%;
 }
 /*  */
-.l3{
+.lps{
+    margin: 20px 0px;
+    padding: 20px;
+}
+.lps div{
     text-align: center;
+    border: 10px solid #ff6434;
+}
+/*  */
+.l3{
+    margin: 20px 0px;
+    text-align: center;
+    padding: 20px;
+    background: green;
+    color: aqua;
+}
+.l3 i{
+    font-size:50px;
 }
 .l3 h1{
     font-size: 25px;
 }
 /*  */
+.l4{
+    display: flex;
+    border: 3px solid orange;
+    height: 50%;
+    flex-direction: column;
+    margin: 10px;
+}
+.l4-s1{
+    display: flex;
+    height: 50%;
+}
+.l4-s1-r2{
+    display: flex;
+    flex-direction: column;
+    height: 50%;
+}
+.l4 img{
+    height: 100%;
+    width: 100%;
+}
+.l4-s2{
+    display: flex;
+    height: 50%;
+}
+.l4-s2-r2{
+    width: 100%;
+    font-size: 40px;
+    background: #ff6434;
+    text-align: center;
+    padding: 40px 0px;
+}
+/*  */
 footer{
-    background: green;
+    background: url(profbrus.jpg);
     text-align: center;
     padding: 10px;
 }
 footer i{
     font-size: 30px;
-    color: #2267d6 ;
-    background: orange;
+    color: white ;
+    background: #2267d6;
     padding: 5px;
 }
