--- a/css/main.css
+++ b/css/main.css
@@ -6,12 +6,15 @@ body{
     font-family: 'roboto';
 }
 /*  */
+.header-table{
+    display: none;
+}
 .header-mobile{
     display: flex;
     background: green;
     padding: 0px 20px;
     position: fixed;
-    justify-content: space-between;
+    justify-content: flex-end;
     text-align: center;
     left:0;
     right: 0;
@@ -20,6 +23,11 @@ body{
     font-family: 'Oswald', solid;
     font-size: 30px;
     font-weight: 900;
+    position: absolute;
+    left: 35px;
+}
+.logo2{
+    display: none;
 }
 a{
     text-decoration: none;
@@ -28,8 +36,7 @@ a{
 .header-mobile i{ 
     border-left: 1px dashed black;
     font-size: 30px;
-    padding: 10px;
-    padding-left: 30px;
+    padding: 10px 20px;
 }
 /*  */
 .l1{
@@ -40,6 +47,7 @@ a{
     margin: 10px;
     margin-top: 60px;
     padding: 5px;
+    max-width: 500px;
 }
 /*  */
 .l2{
@@ -48,11 +56,13 @@ a{
     justify-content: center;
     text-align: center;
 }
+.l2 a{
+    color: black;
+}
 .brus, .komplekt , .projekt, .key{
     border: 1px solid green;
     margin: 10px;
     padding: 20px 0px;
-    background: 
 }
 .cena{
     padding:10px 0px;
@@ -128,10 +138,65 @@ footer{
     background: url(profbrus.jpg);
     text-align: center;
     padding: 10px;
+    margin-top: 10px;
 }
 footer i{
     font-size: 30px;
     color: white ;
     background: #2267d6;
     padding: 5px;
+}
+/*  */
+button{
+    border: 3px solid #218294;
+    font-size: 25px;
+    color: #218294;
+    background: transparent;
+    margin: 0px 10px;
+}
+/*  */
+@media(min-width:407px){
+    .logo{
+        display: none;
+    }
+    .logo2{
+        position: absolute;
+        left: 21px;
+        padding: 5px 5px;
+        font-size: 30px;
+        display: block;
+    }
+}
+@media(min-width:548px){
+    .l1{
+        margin: auto;
+        margin-top: 60px;
+    }
+}
+@media(min-width:768px){
+    .header-mobile{
+        display: none;
+    }
+    .header-table{
+        display: block;
+        background: url(hd-tab.jpg);
+        color: white;
+    }
+    .table{
+        display: flex;
+    }
+    .table2{
+        display: flex;
+        flex-direction: column;
+    }
+    .komplekt img, .projekt img, .key img{ 
+        width: 65%;
+        max-width: 350px;
+    }
+    .brus{
+        padding: 20px 20px;
+    }
+    .l2, .lps{
+        margin: auto
+    }
 }
