--- a/css/main.css
+++ b/css/main.css
@@ -105,7 +105,7 @@ a{
     font-size: 25px;
 }
 /*  */
-.l4{
+/* .l4{
     display: flex;
     border: 3px solid orange;
     height: 50%;
@@ -134,8 +134,8 @@ a{
     font-size: 40px;
     background: #ff6434;
     text-align: center;
-    padding: 40px 0px;
-}
+    padding: 40px 0px; 
+}*/
 /*  */
 footer{
     background: url(profbrus.jpg);
@@ -148,6 +148,15 @@ footer i{
     color: white ;
     background: #2267d6;
     padding: 5px;
+}
+/*  */
+#lg{
+    text-align: center;
+    margin: 0px 15px;
+}
+#lg img{
+  width: 100%;
+  height: 300px;
 }
 /*  */
 button{
@@ -217,11 +226,21 @@ iframe{
         padding: 10px
     }
     /*  */
+    .l1{
+        margin: 30px auto;
+    }
+    /*  */
     .l1-2{
+        justify-content: center;
         display: flex;
+        text-align: center;
+        background: #ff6434;
     }
     .l1-2 i{
-        font-size: 100px;
+        font-size: 80px;
+    }
+    .l1-2 div{
+        margin: 30px 10px;
     }
     /*  */
     .table{
@@ -256,4 +275,10 @@ iframe{
          height: 300px;
          float: right;
     }
+    #lg img{
+        height: 500px;
+      }
+}
+@media(min-width:1240px){
+    
 }
