--- a/css/main.css
+++ b/css/main.css
@@ -104,6 +104,10 @@ a{
 .l3 h1{
     font-size: 25px;
 }
+.l3-st2{
+    display: flex;
+    flex-direction: column-reverse;
+}
 /*  */
 /* .l4{
     display: flex;
@@ -155,8 +159,8 @@ footer i{
     margin: 0px 15px;
 }
 #lg img{
-  width: 100%;
-  height: 300px;
+    width: 100%;
+    height: 300px;
 }
 /*  */
 button{
@@ -265,20 +269,43 @@ iframe{
         display: flex;
         flex-direction: column;
     }
-    .l3-st{
+    .l3-st, .l3-st2{
         display: flex;
+        flex-direction: row;
         padding: 30px;
     }
     iframe{ 
         display: block;
         width: 400px;
-         height: 300px;
-         float: right;
+        height: 300px;
+        float: right;
     }
     #lg img{
         height: 500px;
-      }
+    }
 }
 @media(min-width:1240px){
-    
+    .table{
+        flex-direction: column;
+    }
+    .brus{ display: flex;
+        flex-direction: row;
+    }
+    .brus div{
+        margin: auto ;
+    }
+    .brus button{
+        height: 100%;
+        margin: auto ;
+    }
+    .table2{
+        flex-direction: row;
+    }
+    iframe{ 
+        width: 600px;
+        height: 500px;
+    }
+    #lg img{
+        height: 700px;
+    }
 }
