--- a/page/kontakt/css/cont.css
+++ b/page/kontakt/css/cont.css
@@ -1,5 +1,5 @@
 .l1-kont{
-    padding: 50px;
+    padding: 0px 50px;
 }
 .l1-kont h1{
 }
@@ -7,6 +7,7 @@ iframe{
     width: 100%;
     height: 400px;
     border: 0;
+    padding-bottom: 10px;
 }
 @media(min-width:760px){
     iframe{
